feat: Enhance replay command to replay all --errros and/or --warnings from a previous run